kubernetes/manifests/deployment.yml
#This is deployent file for the go-web-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels: 
    app: go-web-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: go-web-app
    template:
      metadata:
        labels:
          app: go-web-app
      spec:
        conatiners:
        - name: go-web-app
        image: obekegodfrey/go-web-app:v1
        ports:
        - containerPort: 8080
