kubernetes/manifests/ingress.yml
#This is an ingress file for go-web-app
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewite-target: /
spec:
  ingressClassName: nginx 
  rules: 
  - host: go-web-app.local 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: go-web-app
            ports:
              number: 80
